[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sharding_sandbox"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "jax==0.5.2",
    "jaxlib==0.5.1",
    "ml_dtypes==0.5.1",
    "numpy==2.2.3",
    "opt_einsum==3.4.0",
    "scipy==1.15.2",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]==0.5.2",
]

# This project is a sandbox, not a library — no Python packages to install.
[tool.setuptools]
py-modules = []
